Canviar tipus de dades de "SignTypes" de String a Enumerats a la API de firma #967
